--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
-    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:padding="16dp">
@@ -15,9 +15,9 @@
             android:id="@+id/buttonServerControl"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Start Server"
             android:layout_centerInParent="true"
-            android:onClick="onServerControlButtonClick" />
+            android:onClick="onServerControlButtonClick"
+            android:text="@string/start_server" />
     </RelativeLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
